update mis align ments fixed!!

--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,10 @@ a {
   padding-left: 50em;
   text-align: center;
 }
+.twitterprojectclone {
+  text-align: center;
+  align-content: center;
+}
 p {
   text-align: center;
 }
